[gd_scene load_steps=16 format=3 uid="uid://cheoq2dxkgi7u"]

[ext_resource type="Script" path="res://components/fps_character/fps_character.gd" id="1_1asp3"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3D.gd" id="1_r0lxu"]
[ext_resource type="PackedScene" uid="uid://clcdrmfwr6u7k" path="res://props/dev_rifle.tscn" id="3_hv7dg"]
[ext_resource type="PackedScene" uid="uid://c0u1u1w315lqq" path="res://ui/fps_char_state_info/fps_character_state_info.tscn" id="3_xcuqc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ftsmo"]
radius = 0.25
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_a12wd"]
radius = 0.25
height = 1.3

[sub_resource type="Animation" id="Animation_7g0d3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FpsCharPcam:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FpsCharPcam:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_2fcpc"]
resource_name = "heavy_landing"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FpsCharPcam:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.5, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FpsCharPcam:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_phewf"]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FpsCharPcam:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FpsCharPcam:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0523599, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_l6rgd"]
resource_name = "landing"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FpsCharPcam:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FpsCharPcam:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bjicv"]
_data = {
"RESET": SubResource("Animation_7g0d3"),
"heavy_landing": SubResource("Animation_2fcpc"),
"jump": SubResource("Animation_phewf"),
"landing": SubResource("Animation_l6rgd")
}

[sub_resource type="Animation" id="Animation_seiyb"]
resource_name = "aim_down_sights"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DevRifle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.0632654, -0.0143892, -0.0487807), Vector3(3.64929e-05, -0.00134647, -0.0487807)]
}

[sub_resource type="Animation" id="Animation_mtodd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DevRifle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.0632654, -0.0143892, -0.0487807)]
}

[sub_resource type="Animation" id="Animation_mdgal"]
resource_name = "unaim_down_sights"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DevRifle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(3.64929e-05, -0.00134647, -0.0487807), Vector3(0.0632654, -0.0143892, -0.0487807)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iy8v0"]
_data = {
"RESET": SubResource("Animation_mtodd"),
"aim_down_sights": SubResource("Animation_seiyb"),
"unaim_down_sights": SubResource("Animation_mdgal")
}

[node name="FpsCharacter" type="CharacterBody3D"]
script = ExtResource("1_1asp3")

[node name="StandingCol" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_ftsmo")

[node name="CrouchingCol" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0)
shape = SubResource("CapsuleShape3D_a12wd")
disabled = true

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="Head" type="Node3D" parent="Neck"]

[node name="Eyes" type="Node3D" parent="Neck/Head"]

[node name="FpsCharPcam" type="Node3D" parent="Neck/Head/Eyes"]
script = ExtResource("1_r0lxu")
priority_override = false
priority = 0
follow_mode = 0
look_at_mode = 0
tween_parameters = null
tween_on_load = true
inactive_update_mode = 0
camera_3D_resource = null

[node name="EyeRaycast" type="RayCast3D" parent="Neck/Head/Eyes/FpsCharPcam"]
target_position = Vector3(0, 0, -1000)
debug_shape_custom_color = Color(0, 0.945098, 0, 0.117647)

[node name="EyesAnimPlayer" type="AnimationPlayer" parent="Neck/Head/Eyes"]
libraries = {
"": SubResource("AnimationLibrary_bjicv")
}

[node name="DevRifle" parent="Neck/Head/Eyes" instance=ExtResource("3_hv7dg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0632654, -0.0143892, -0.0487807)

[node name="AdsAnimPlayer" type="AnimationPlayer" parent="Neck/Head/Eyes"]
libraries = {
"": SubResource("AnimationLibrary_iy8v0")
}

[node name="StandingRoomCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 1.8, 0)

[node name="ContinueSlideCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.137367, -0.448626)

[node name="FpsCharacterStateInfo" parent="." instance=ExtResource("3_xcuqc")]

[node name="CoyoteTimer" type="Timer" parent="."]
